# omniget-plugin-template

./: Cargo.toml  README.md  plugin.json
.github/workflows/: release.yml
src/: lib.rs  state.rs
src/commands/: example.rs
