[package]
name = "omniget-plugin-my-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tokio-util = { version = "0.7", features = ["rt"] }
omniget-core = { git = "https://github.com/tonhowtf/omniget", path = "src-tauri/omniget-core" }
